[package]
authors = ["etke"]
categories = ["command-line-utilities"]
description = "Fast multi-platform (ELF/PE/MachO) binary checksec command line utility and library."
documentation = "https://docs.rs/checksec"
edition = "2021"
homepage = "https://crates.io/crates/checksec"
include = [
  "src/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE",
]
keywords = ["checksec", "binary", "security"]
license = "Apache-2.0"
name = "checksec"
readme = "README.md"
repository = "https://github.com/etke/checksec.rs"
version = "0.0.9"

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
lto = true        # Enable Link Time Optimization
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Abort on panic

[dependencies]
clap = {version = "4.0.14", features = ["cargo"]}
colored = {version = "2.0.0", optional = true}
colored_json = {version = "4.1.0", optional = true}
either = "1.8.1"
glob = "0.3.0"
goblin = "0.8.0"
iced-x86 = {version = "1.18.0", optional = true}
ignore = "0.4.18"
itertools = "0.12.1"
memmap2 = "0.9.4"
rayon = "1.7.0"
scroll = {version = "0.12.0", features = ["derive"]}
serde = {version = "1.0.145", features = ["derive"]}
serde_derive = "1.0.145"
serde_json = "1.0.86"
sysinfo = "0.28.2"

[target.'cfg(target_os="windows")'.dependencies]
windows = {version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Kernel",
  "Win32_System_Memory",
  "Win32_System_Threading",
]}

[target.'cfg(target_os="linux")'.dependencies]
xattr = {version = "1.0.0", optional = true}

[lib]
name = "checksec"
path = "src/lib.rs"

[[bin]]
name = "checksec"
path = "src/main.rs"

[features]
color = ["colored", "colored_json", "xattr"]
default = ["elf", "macho", "pe", "color", "maps", "disassembly"]
disassembly = ["iced-x86"]
elf = ["shared"]
macho = ["shared"]
maps = []
pe = []
shared = []
